Implemented prototypes of Vector API and FFM API